<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/list_row_box_seanse">

  <TextView android:id="@+id/cinema_title"
            style="@style/list_row_seanse_title" />

  <LinearLayout style="@style/list_row_seanse_box">  
  
  <LinearLayout style="@style/list_row_seanse_poster_box">  
	  <ImageView android:id="@+id/cinema_poster"
	             style="@style/list_row_seanse_poster"/>
  </LinearLayout>
  
  <TableLayout style="@style/list_row_seanse_table">
	  <TableRow style="@style/list_row_seanse_table_row">
	    <TextView android:id="@+id/cinema_orig_title"
	              style="@style/list_row_seanse_trow" />
	  </TableRow>
    <TableRow style="@style/list_row_seanse_table_row">
      <TextView style="@style/list_row_seanse_lrow"
            android:text="@string/seance_zal_title" />
      <TextView android:id="@+id/cinema_zal_title" 
                style="@style/list_row_seanse_rrow"  />
    </TableRow>
    <TableRow style="@style/list_row_seanse_table_row">
      <TextView style="@style/list_row_seanse_lrow"
            android:text="@string/seance_times" />
      <TextView android:id="@+id/cinema_times" 
                style="@style/list_row_seanse_rrow"  />
    </TableRow>
	  <TableRow style="@style/list_row_seanse_table_row">
	    <TextView style="@style/list_row_seanse_lrow"
            android:text="@string/seance_prices" />
      <TextView android:id="@+id/cinema_prices" 
                style="@style/list_row_seanse_rrow"  /> 
	  </TableRow>
	</TableLayout>
 </LinearLayout>
 
</LinearLayout>